# vrp-harvesting-study

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-04-19-vrp-phase1-plan.md  2026-04-20-vrp-phase2-plan.md  2026-04-21-vrp-phase5-plan.md
docs/specs/: 2026-04-19-vrp-harvesting-design.md
notebooks/: 01_strategy_a.ipynb
scripts/: run_strategy_a.py  run_strategy_a_sweep.py  run_strategy_b_putindex.py  run_strategy_b_spread.py  run_strategy_c.py  run_strategy_c_overlays.py  run_strategy_c_sensitivity.py  run_tail_risk.py  sanity_vxx.py
src/vrp/data/: benchmarks.py  spx.py  vix.py  vx_futures.py
src/vrp/overlays/: regime_filter.py  tail_hedge.py  vol_scaling.py
src/vrp/report/: metrics.py  regimes.py
src/vrp/strategies/: strategy_a.py  strategy_b.py  strategy_c.py
src/vrp/util/: annualize.py  bootstrap.py  bs.py
tests/: test_annualize.py  test_bootstrap.py  test_bs.py  test_metrics.py  test_overlay_regime_filter.py  test_overlay_tail_hedge.py  test_overlay_vol_scaling.py  test_strategy_b.py  test_strategy_c.py  test_vx_roll.py
